--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Clean Blog - Start Bootstrap Theme</title>
+        <title>Climate change</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -13,141 +13,123 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="static/styles.css" rel="stylesheet" />
+        <link href="../static/styles.css" rel="stylesheet" />
+		<link href="../static/css.css" rel="stylesheet"/>
+		<script src="../static/script.js"></script>
     </head>
     <body>
+		<div>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light navbar2" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse stickyBar" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Sample Post</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations.html">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Statistics</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/home-bg.jpg')">
+        <header class="masthead class2" style="">
             <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <div class="site-heading">
-                            <h1>Clean Blog</h1>
-                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
-                        </div>
-                    </div>
+                <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
+				<strong class="">Welcome!</strong> Thank you for your interest in Climate Change in the
+				St. Louis area
                 </div>
             </div>
+			
+			<div>
+				<table border= "1">
+				</table>
+			</div>
         </header>
         <!-- Main Content-->
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on September 24, 2021
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on September 18, 2021
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Science has not yet mastered prophecy</h2>
-                            <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on August 24, 2021
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Failure is not an option</h2>
-                            <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on July 8, 2021
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer-->
-        <footer class="border-top">
+        <main class="mb-4">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2021</div>
+						<div class="row gx-4 gx-lg-5 justify-content-center centerText ">
+						<strong class="">Overview</strong> <hr>
+						<p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis. 
+						St. Louis' average temperature to rise more than 2 degrees this decade. 
+						We know 
+						that warmer air holds more moisture than cooler air. This will in time lead to 
+						more severe rainfall in the area.</p>
+						
+						<p>
+							A long-term change in the average weather patterns that have come to define Earth's local, 
+							regional, and global climates is referred to as climate change. These modifications have a 
+							wide range of impacts. Climate change is an ongoing issue going on within the world. It has been 
+							a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning, 
+							have increased heat-trapping greenhouse gas levels in Earth's atmosphere, elevating Earth's average surface 
+							temperature, as seen in changes in the climate from the early twentieth century.
+						</p>
+						
+						<p>
+							Unfortunately, St louis has seen its fair share of the impacts of this global crisis we are currently facing. 
+							St Louis has seen numerous devastations from increased rainfall over the past few decades due to the rise in greenhouse 
+							gas emissions and other human activities. This later would later attribute to a wet fall and increase of moisture levels 
+							within the soil of the basins of the Missouri and Mississippi rivers, causing the rivers to flood at an historic high. 
+							This is known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded. 
+							This devastation is responsible for nearly fifty deaths and over fifteen million dollars in damages. Despite the phenomenon, climate 
+							change is still being an issue swept underneath the rug.
+						</p>
+						
+						<p>
+						We took data we found from a pdf containing the average temperature of St. Louis over the past decades and cleaned through it so that the average 
+						temperature would align with the corresponding decade. We then used the clean data and used it to create graphs to visually represent the data patterns using 
+						python. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an 
+						all-time high, which proves that the climate change crises is gradually worsening.
+						</p>
+						
+						<p>
+							Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to 
+							exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned, 
+							I hope this encourages you to make difference and choose better environmental decisions!
+						</p>
+				
+						</div>
                     </div>
                 </div>
             </div>
+        </main>
+        <!-- Footer-->
+        <footer class=" row gx-4 centerText justify-content-center" id="footerID">
+		<strong>Citations:</strong>
+		<hr>
+		<hr>
+		<table border = 0>
+		<tr>
+		<p>
+			"Call to Action" <i>Global Climate and Health Forum,</i><br>
+			<a href="https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival">https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival</a>
+			
+		</p>
+		</tr>
+		<br>
+		<br>
+		<tr>
+		<p>
+			“Overview: Weather, Global Warming and Climate Change.” <br><i>Nasa</i>
+			NASA, 24 Aug. 2021, <a href="https://climate.nasa.gov/resources/global-warming-vs-climate-change/">https://climate.nasa.gov/resources/global-warming-vs-climate-change/</a>
+		</p>
+		</tr>
+		<tr>
+		<p>
+			<i>TEMP STL Annual Averages.xls 1/5/2021</i> <br> <a href="https://www.weather.gov/media/lsx/climate/stl/temp/temp_stl_annual_averages.pdf">https://www.weather.gov/media/lsx/climate/stl/temp/temp_stl_annual_averages.pdf</a>
+		</p>
+		</tr>
+		</table>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="static/scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
