--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Overview</title>
+		<title>Organizations</title>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -12,9 +12,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="styles.css" rel="stylesheet" />
-		<link href="css.css" rel="stylesheet"/>
-		<script src="script.js"></script>
+        <link href="../static/styles.css" rel="stylesheet" />
+		<link href="../static/css.css" rel="stylesheet"/>
+		<script src="../static/script.js"></script>
 		
 	</head>
 	
@@ -29,8 +29,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="statistics.html">Statistics</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -60,13 +60,59 @@
 						<table border=0 class="imgClass">
 							<tr>
 								<th>
-									<a href=""><img src="MCE50-logo.png"></a>
+									<a href="https://moenvironment.org/"><img src="../static/MCE50-logo.png"></a>
 								</th>
 								<th>
 									<p id="pID">
 										"Missouri Coalition for the Environment (MCE) is Missouri’s independent, 
 										citizens’ environmental organization for clean water, clean air, clean energy,
 										and a healthy environment."
+									</p>
+								</th>
+							</tr>
+							<tr>
+								<th>
+									<a href="https://environmentmissouri.org/feature/moe/about-us"><img src="../static/EnvMo.png"></a>
+								</th>
+								<th>
+									<p>
+										"With Environment Missouri, you protect the places that all of us love and promote core environmental values, such as 
+										clean air to breathe, clean water to drink, and clean energy to power our lives. We focus 
+										on timely, targeted action that wins tangible improvements in the quality of our environment and our lives.
+									</p>
+								</th>
+							</tr>
+							<tr>
+								<th>
+									<a href="https://citizensclimatelobby.org/chapters/MO_St_Louis/"><img src="../static/CCL.png"></a>
+								</th>
+								<th>
+									<p>
+										"Citizens’ Climate Lobby is a nonprofit, nonpartisan, grassroots advocacy organization empowering 
+										people to experience breakthroughs exercising their personal and political power. Our chapter is 
+										just one of hundreds of chapters across the world working to create the political will for a livable world."
+									</p>
+								</th>
+							</tr>
+							<tr>
+								<th>
+									<a href="https://grha.org/"><img src="../static/brightside.png"></a>
+								</th>
+								<th>
+									<p>
+										"At Brightside St. Louis, our mission is to improve the quality of life in our community by educating, engaging and 
+										inspiring St. Louisans to make our region cleaner, greener and more environmentally sustainable."
+									</p>
+								</th>
+							</tr>
+							<tr>
+								<th>
+									<a href="https://www.greencitycoalition.org/"><img src="../static/gcc.png"></a>
+								</th>
+								<th>
+									<p>
+										"Green City Coalition is a formal partnership between the City of St. Louis, St. Louis Development Corporation, Missouri Department 
+										of Conservation, and Metropolitan St. Louis Sewer District working collaboratively with member organizations and neighbors to convert vacant and abandoned properties to new community-owned green spaces that promote healthy, biodiverse, and resilient neighborhoods."
 									</p>
 								</th>
 							</tr>
