--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -12,9 +12,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="styles.css" rel="stylesheet" />
-		<link href="css.css" rel="stylesheet"/>
-		<script src="script.js"></script>
+        <link href="../static/styles.css" rel="stylesheet" />
+		<link href="../static/css.css" rel="stylesheet"/>
+		<script src="../static/script.js"></script>
 		
 	</head>
 	
@@ -29,8 +29,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations.html">Organizations</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -60,7 +60,12 @@
 						<table border=0 class="imgClass">
 							<tr>
 								<th>
-									<a href=""><img src="randomgraph.png"></a>
+									<a href=""><img src="../static/randomgraph.png"></a>
+								</th>
+							</tr>
+							<tr>
+								<th>
+									<a href=""><img src = "../static/randomgraph2.png"</a>
 								</th>
 							</tr>
 						</table>
