--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,9 +27,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Homepage</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations.html">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="statistics.html">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/statistics">Statistics</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,7 +38,7 @@
         <header class="masthead" style="background-image: url('assets/img/contact-bg.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    
+
                 </div>
             </div>
         </header>
@@ -49,7 +49,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
 					<div class="page-heading centerText">
                             <h1>Contact Us</h1>
-                            
+
                         </div>
 						</div>
 						</div>
@@ -119,8 +119,8 @@
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                
-                    
+
+
                 </div>
             </div>
         </footer>
