--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
                 </button>
                 <div class="collapse navbar-collapse stickyBar" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations.html">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Statistics</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="stat">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +43,7 @@
 				St. Louis area
                 </div>
             </div>
-			
+
 			<div>
 				<table border= "1">
 				</table>
@@ -56,44 +56,44 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
 						<div class="row gx-4 gx-lg-5 justify-content-center centerText ">
 						<strong class="">Overview</strong> <hr>
-						<p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis. 
-						St. Louis' average temperature to rise more than 2 degrees this decade. 
-						We know 
-						that warmer air holds more moisture than cooler air. This will in time lead to 
+						<p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis.
+						St. Louis' average temperature to rise more than 2 degrees this decade.
+						We know
+						that warmer air holds more moisture than cooler air. This will in time lead to
 						more severe rainfall in the area.</p>
-						
+
 						<p>
-							A long-term change in the average weather patterns that have come to define Earth's local, 
-							regional, and global climates is referred to as climate change. These modifications have a 
-							wide range of impacts. Climate change is an ongoing issue going on within the world. It has been 
-							a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning, 
-							have increased heat-trapping greenhouse gas levels in Earth's atmosphere, elevating Earth's average surface 
+							A long-term change in the average weather patterns that have come to define Earth's local,
+							regional, and global climates is referred to as climate change. These modifications have a
+							wide range of impacts. Climate change is an ongoing issue going on within the world. It has been
+							a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning,
+							have increased heat-trapping greenhouse gas levels in Earth's atmosphere, elevating Earth's average surface
 							temperature, as seen in changes in the climate from the early twentieth century.
 						</p>
-						
+
 						<p>
-							Unfortunately, St louis has seen its fair share of the impacts of this global crisis we are currently facing. 
-							St Louis has seen numerous devastations from increased rainfall over the past few decades due to the rise in greenhouse 
-							gas emissions and other human activities. This later would later attribute to a wet fall and increase of moisture levels 
-							within the soil of the basins of the Missouri and Mississippi rivers, causing the rivers to flood at an historic high. 
-							This is known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded. 
-							This devastation is responsible for nearly fifty deaths and over fifteen million dollars in damages. Despite the phenomenon, climate 
+							Unfortunately, St louis has seen its fair share of the impacts of this global crisis we are currently facing.
+							St Louis has seen numerous devastations from increased rainfall over the past few decades due to the rise in greenhouse
+							gas emissions and other human activities. This later would later attribute to a wet fall and increase of moisture levels
+							within the soil of the basins of the Missouri and Mississippi rivers, causing the rivers to flood at an historic high.
+							This is known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded.
+							This devastation is responsible for nearly fifty deaths and over fifteen million dollars in damages. Despite the phenomenon, climate
 							change is still being an issue swept underneath the rug.
 						</p>
-						
+
 						<p>
-						We took data we found from a pdf containing the average temperature of St. Louis over the past decades and cleaned through it so that the average 
-						temperature would align with the corresponding decade. We then used the clean data and used it to create graphs to visually represent the data patterns using 
-						python. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an 
+						We took data we found from a pdf containing the average temperature of St. Louis over the past decades and cleaned through it so that the average
+						temperature would align with the corresponding decade. We then used the clean data and used it to create graphs to visually represent the data patterns using
+						python. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
 						all-time high, which proves that the climate change crises is gradually worsening.
 						</p>
-						
+
 						<p>
-							Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to 
-							exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned, 
+							Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to
+							exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned,
 							I hope this encourages you to make difference and choose better environmental decisions!
 						</p>
-				
+
 						</div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
 		<p>
 			"Call to Action" <i>Global Climate and Health Forum,</i><br>
 			<a href="https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival">https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival</a>
-			
+
 		</p>
 		</tr>
 		<br>
