--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -15,9 +15,9 @@
         <link href="../static/styles.css" rel="stylesheet" />
 		<link href="../static/css.css" rel="stylesheet"/>
 		<script src="../static/script.js"></script>
-		
+
 	</head>
-	
+
 	<body>
 	<div>
         <!-- Navigation-->
@@ -29,9 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Homepage</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="statistics.html">Statistics</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/statistics">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,10 +42,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
 					<strong class="">Welcome!</strong> Thank you for your interest in Climate Change in the
 					St. Louis area
-				
+
                 </div>
             </div>
-			
+
 			<div>
 				<table border= "1">
 				</table>
@@ -64,7 +64,7 @@
 								</th>
 								<th>
 									<p id="pID">
-										"Missouri Coalition for the Environment (MCE) is Missouri’s independent, 
+										"Missouri Coalition for the Environment (MCE) is Missouri’s independent,
 										citizens’ environmental organization for clean water, clean air, clean energy,
 										and a healthy environment."
 									</p>
@@ -76,8 +76,8 @@
 								</th>
 								<th>
 									<p>
-										"With Environment Missouri, you protect the places that all of us love and promote core environmental values, such as 
-										clean air to breathe, clean water to drink, and clean energy to power our lives. We focus 
+										"With Environment Missouri, you protect the places that all of us love and promote core environmental values, such as
+										clean air to breathe, clean water to drink, and clean energy to power our lives. We focus
 										on timely, targeted action that wins tangible improvements in the quality of our environment and our lives.
 									</p>
 								</th>
@@ -88,8 +88,8 @@
 								</th>
 								<th>
 									<p>
-										"Citizens’ Climate Lobby is a nonprofit, nonpartisan, grassroots advocacy organization empowering 
-										people to experience breakthroughs exercising their personal and political power. Our chapter is 
+										"Citizens’ Climate Lobby is a nonprofit, nonpartisan, grassroots advocacy organization empowering
+										people to experience breakthroughs exercising their personal and political power. Our chapter is
 										just one of hundreds of chapters across the world working to create the political will for a livable world."
 									</p>
 								</th>
@@ -100,7 +100,7 @@
 								</th>
 								<th>
 									<p>
-										"At Brightside St. Louis, our mission is to improve the quality of life in our community by educating, engaging and 
+										"At Brightside St. Louis, our mission is to improve the quality of life in our community by educating, engaging and
 										inspiring St. Louisans to make our region cleaner, greener and more environmentally sustainable."
 									</p>
 								</th>
@@ -111,13 +111,13 @@
 								</th>
 								<th>
 									<p>
-										"Green City Coalition is a formal partnership between the City of St. Louis, St. Louis Development Corporation, Missouri Department 
+										"Green City Coalition is a formal partnership between the City of St. Louis, St. Louis Development Corporation, Missouri Department
 										of Conservation, and Metropolitan St. Louis Sewer District working collaboratively with member organizations and neighbors to convert vacant and abandoned properties to new community-owned green spaces that promote healthy, biodiverse, and resilient neighborhoods."
 									</p>
 								</th>
 							</tr>
 						</table>
-				
+
 						</div>
                     </div>
                 </div>
