--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -15,9 +15,9 @@
         <link href="../static/styles.css" rel="stylesheet" />
 		<link href="../static/css.css" rel="stylesheet"/>
 		<script src="../static/script.js"></script>
-		
+
 	</head>
-	
+
 	<body>
 	<div>
         <!-- Navigation-->
@@ -29,9 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Homepage</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations.html">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,10 +42,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
 					<strong class="">Welcome!</strong> Thank you for your interest in Climate Change in the
 					St. Louis area
-				
+
                 </div>
             </div>
-			
+
 			<div>
 				<table border= "1">
 				</table>
@@ -69,7 +69,7 @@
 								</th>
 							</tr>
 						</table>
-				
+
 						</div>
                     </div>
                 </div>
@@ -84,4 +84,3 @@
 	</div>
 	<script="script.js"></script>
 	</body>
-
