--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,9 +13,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../static/styles.css" rel="stylesheet" />
-		<link href="../static/css.css" rel="stylesheet" />
-		<script src="../static/script.js"></script>
+        <link href="/static/styles.css" rel="stylesheet" />
+		<link href="/static/css.css" rel="stylesheet" />
+		<script src="/static/script.js"></script>
     </head>
     <body>
         <!-- Navigation-->
@@ -62,24 +62,24 @@
 							<table border=0 class="contactTable">
 								<tr>
 									<th>
-										<img src="../static/antonio.jpg">
+										<img src="/static/antonio.jpg">
 										<figcaption>Name: Antonio</figcaption>
 										<figcaption>Email: arvallez113@students.ecsu.edu</figcaption>
 									</th>
 									<th>
-										<img src="../static/sincere.jpg">
+										<img src="/static/sincere.jpg">
 										<figcaption>Name: Sincere Ponton</figcaption>
 										<figcaption>Email: sjponton@students.ecsu.edu</figcaption>
 									</th>
 								</tr>
 								<tr>
 									<th>
-										<img src="../static/Iasia.png">
+										<img src="/static/Iasia.png">
 										<figcaption>Name: Iasia Cooper</figcaption>
 										<figcaption>Email: arvallez113@students.ecsu.edu</figcaption>
 									</th>
 									<th>
-										<img src="../static/Tony.jpg">
+										<img src="/static/Tony.jpg">
 										<figcaption>Name: Tony Guy</figcaption>
 										<figcaption>Email: sjponton@students.ecsu.edu</figcaption>
 									</th>
@@ -92,19 +92,19 @@
 							<table border=0 class="contactTable">
 								<tr>
 									<th>
-										<img src="../static/mdocsta.jpg">
+										<img src="/static/mdocsta.jpg">
 										<figcaption>Name: Dr. Malcolm Dcosta</figcaption>
 										<figcaption>Email: mtdcosta@ecsu.edu</figcaption>
 									</th>
 									<th>
-										<img src="../static/melbakary.jpg">
+										<img src="/static/melbakary.jpg">
 										<figcaption>Name: Dr. Mohammed Elbakary</figcaption>
 										<figcaption>Email: melbakary@ecsu.edu</figcaption>
 									</th>
 								</tr>
 								<tr>
 									<th id="uniqueID">
-										<img src="../static/jholly.jpg">
+										<img src="/static/jholly.jpg">
 										<figcaption>Name; John Holly</figcaption>
 										<figcaption>Email: jholly@sura.org</figcaption>
 									</th>
