--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -12,9 +12,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../static/styles.css" rel="stylesheet" />
-		<link href="../static/css.css" rel="stylesheet"/>
-		<script src="../static/script.js"></script>
+        <link href="/static/styles.css" rel="stylesheet" />
+		<link href="/static/css.css" rel="stylesheet"/>
+		<script src="/static/script.js"></script>
 
 	</head>
 
@@ -60,7 +60,7 @@
 						<table border=0 class="imgClass">
 							<tr>
 								<th>
-									<a href="https://moenvironment.org/"><img src="../static/MCE50-logo.png"></a>
+									<a href="https://moenvironment.org/"><img src="/static/MCE50-logo.png"></a>
 								</th>
 								<th>
 									<p id="pID">
@@ -72,7 +72,7 @@
 							</tr>
 							<tr>
 								<th>
-									<a href="https://environmentmissouri.org/feature/moe/about-us"><img src="../static/EnvMo.png"></a>
+									<a href="https://environmentmissouri.org/feature/moe/about-us"><img src="/static/EnvMo.png"></a>
 								</th>
 								<th>
 									<p>
@@ -84,7 +84,7 @@
 							</tr>
 							<tr>
 								<th>
-									<a href="https://citizensclimatelobby.org/chapters/MO_St_Louis/"><img src="../static/CCL.png"></a>
+									<a href="https://citizensclimatelobby.org/chapters/MO_St_Louis/"><img src="/static/CCL.png"></a>
 								</th>
 								<th>
 									<p>
@@ -96,7 +96,7 @@
 							</tr>
 							<tr>
 								<th>
-									<a href="https://grha.org/"><img src="../static/brightside.png"></a>
+									<a href="https://grha.org/"><img src="/static/brightside.png"></a>
 								</th>
 								<th>
 									<p>
@@ -107,7 +107,7 @@
 							</tr>
 							<tr>
 								<th>
-									<a href="https://www.greencitycoalition.org/"><img src="../static/gcc.png"></a>
+									<a href="https://www.greencitycoalition.org/"><img src="/static/gcc.png"></a>
 								</th>
 								<th>
 									<p>
