--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../static/styles.css" rel="stylesheet" />
-		<link href="../static/css.css" rel="stylesheet"/>
-		<script src="../static/script.js"></script>
+        <link href="/static/styles.css" rel="stylesheet" />
+		<link href="/static/css.css" rel="stylesheet"/>
+		<script src="/static/script.js"></script>
     </head>
     <body>
 		<div>
@@ -28,9 +28,9 @@
                 </button>
                 <div class="collapse navbar-collapse stickyBar" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="organizations">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="stat">Statistics</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/statistics">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
