--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -12,9 +12,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../static/styles.css" rel="stylesheet" />
-		<link href="../static/css.css" rel="stylesheet"/>
-		<script src="../static/script.js"></script>
+        <link href="/static/styles.css" rel="stylesheet" />
+		<link href="/static/css.css" rel="stylesheet"/>
+		<script src="/static/script.js"></script>
 
 	</head>
 
@@ -60,12 +60,12 @@
 						<table border=0 class="imgClass">
 							<tr>
 								<th>
-									<a href=""><img src="../static/randomgraph.png"></a>
+									<a href=""><img src="/static/linegraph.png"></a>
 								</th>
 							</tr>
 							<tr>
 								<th>
-									<a href=""><img src = "../static/randomgraph2.png"</a>
+									<a href=""><img src = "/static/bargraph.png"</a>
 								</th>
 							</tr>
 						</table>
