--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,7 +47,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-					<div class="page-heading centerText">
+					<div class="page-heading centerText" style="text-align: center;">
                             <h1>Contact Us</h1>
 
                         </div>
