--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -56,7 +56,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-						<div class="row gx-4 gx-lg-5  centerText ">
+						<div class="row gx-4 gx-lg-5  centerText " style="text-align: center;">
 						<table border=0 class="imgClass">
 							<tr>
 								<th>
