--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -56,20 +56,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-						<div class="row gx-4 gx-lg-5 justify-content-center centerText ">
-						<table border=0 class="imgClass">
-							<tr>
-								<th>
-									<a href=""><img src="/static/linegraph.png"></a>
-								</th>
-							</tr>
-							<tr>
-								<th>
-									<a href=""><img src = "/static/bargraph.png"</a>
-								</th>
-							</tr>
-						</table>
-
+						<div class="row gx-4 gx-lg-5 justify-content-center centerText " style="text-align: center;">
+						<a href="#"><img src="/static/linegraph.png"></a>
+						<a href="#"><img src = "/static/bargraph.png"</a>
 						</div>
                     </div>
                 </div>
