--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,7 +47,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-					<div class="page-heading centerText" style="text-align: center;">
+					<div class="page-heading centerText" style="margin: auto; position: absolute; text-align: center !important; float: center !important;">
                             <h1>Contact Us</h1>
 
                         </div>
@@ -74,7 +74,7 @@
 								</tr>
 								<tr>
 									<th>
-										<img src="/static/Iasia.png">
+										<img src="/static/iasia.jpg">
 										<figcaption>Name: Iasia Cooper</figcaption>
 										<figcaption>Email: arvallez113@students.ecsu.edu</figcaption>
 									</th>
