--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
 						<p>
 							Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to
 							exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned,
-							I hope this encourages you to make difference and choose better environmental decisions!
+							we hope this encourages you to make difference and choose better environmental decisions!
 						</p>
 
 						</div>
