--- a/static/css.css
+++ b/static/css.css
@@ -3,6 +3,18 @@ header.masthead {
 	background-image: url('https://i.imgur.com/IegfElE.jpg') !important;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table.center {
+  margin-left: auto !important;
+  margin-right: auto !important;
+	text-align: center !important;
+}
+
 .class1 {
 	margin-top: -100px;
 	font-size: 26px;
@@ -26,12 +38,12 @@ header.masthead {
 .class2
 {
 	background-image: url('thumbnail_image001.jpg');
-}	
+}
 
 .boxModel{
 	background-color: #1AD854;
 	color: white;
-	
+
 }
 .imgClass img{
 	height: 150px;
@@ -51,16 +63,16 @@ header.masthead {
 	right: 0;
 	z-index: 1030;
 	border-bottom: 1px solid #dee2e6;
-	font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", 
+	font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
 					Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	
+
 }
 
 .contactTable img{
 	height:200px !important;
 	width: 200px !important;
 	margin-top: 40px !important;
-	
+
 }
 .contactTable th{
 	padding-left: 40px;
