--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -56,9 +56,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-						<div class="row gx-4 gx-lg-5 justify-content-center centerText " style="text-align: center;">
-						<a href="#"><img src="/static/linegraph.png"></a>
-						<a href="#"><img src = "/static/bargraph.png"</a>
+						<div class="row gx-4 gx-lg-5 justify-content-center centerText " style="margin: auto; position: absolute; text-align: center !important; float: center !important;">
+						<a href="#"><img src="/static/linegraph.png" height="500px"></a>
+						<a href="#"><img src = "/static/bargraph.png" height="500px"></a>
 						</div>
                     </div>
                 </div>
