--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,18 +27,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/statistics">Statistics</a></li>
+                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/contact-bg.jpg')">
+        <header class="masthead">
             <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-
+                <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
+                  <strong class="">Contact us!</strong> Feel free to contact us regarding our project...
                 </div>
             </div>
         </header>
@@ -46,17 +46,15 @@
         <main class="mb-4">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-					<div class="page-heading centerText" style="margin: auto; position: absolute; text-align: center !important; float: center !important;">
-                            <h1>Contact Us</h1>
-
-                        </div>
+                    <div>
+					<div class="page-heading" style="margin: auto;text-align: center !important; float: center !important;">
+                    <h1>Contact Us</h1></div>
+                    <p>This website was a collaborative effort by us here at team Cool Ducks.
+          If you would like to get in touch with us here is how you can do so.</p>
 						</div>
 						</div>
 						</div>
-                        <p>This website was a collaborative effort by us here at team Cool Ducks.
-							If you would like to get in touch with us here is how you can do so.</p>
-                        <div class="my-5">
+                        <div>
 							<h3>Hackers</h3>
 							<hr>
 							<table border=0 class="contactTable">
@@ -76,7 +74,7 @@
 									<th>
 										<img src="/static/iasia.jpg">
 										<figcaption>Name: Iasia Cooper</figcaption>
-										<figcaption>Email: arvallez113@students.ecsu.edu</figcaption>
+										<figcaption>Email: iacooper760@students.ecsu.edu</figcaption>
 									</th>
 									<th>
 										<img src="/static/Tony.jpg">
