--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
                 </button>
                 <div class="collapse navbar-collapse stickyBar" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/statistics">Statistics</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,8 +39,8 @@
         <header class="masthead class2" style="">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-				<strong class="">Welcome!</strong> Thank you for your interest in Climate Change in the
-				St. Louis area
+				<strong class="">Climate Change within St. Louis</strong> Thank you for your interest in Climate Change in the
+				St. Louis area. This webpage was made by the Cool Ducks during the HBCA Hackathon 2021.
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
 						<div class="row gx-4 gx-lg-5 justify-content-center centerText ">
-						<strong class="">Overview</strong> <hr>
+						<h1><strong class="">Overview</strong></h1> <hr>
 						<p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis.
 						St. Louis' average temperature to rise more than 2 degrees this decade.
 						We know
@@ -99,6 +99,19 @@
                 </div>
             </div>
         </main>
+        <h1><strong class="">Data Visualization</strong></h1>
+        <table border=0 class="contactTable2">
+          <tr>
+            <th>
+              <img src="/static/linegraph.png"  height="300px">
+              <figcaption>Line Graph</figcaption>
+            </th>
+            <th>
+              <img src="/static/bargraph.png"  height="300px">
+              <figcaption>Bar Graph</figcaption>
+            </th>
+          </tr>
+        </table
         <!-- Footer-->
         <footer class=" row gx-4 centerText justify-content-center" id="footerID">
 		<strong>Citations:</strong>
