--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -29,9 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/statistics">Statistics</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+											<li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+											<li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+											<li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,11 +39,9 @@
         <!-- Page Header-->
         <header class="masthead class2" style="">
             <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-					<strong class="">Welcome!</strong> Thank you for your interest in Climate Change in the
-					St. Louis area
-
-                </div>
+							<div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
+			<strong class="">Organizations</strong> Check out these awesome Organizations that help with climate change.
+							</div>
             </div>
 
 			<div>
